@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.3-0
-Date: 2016-04-03
+Date: 2016-04-20
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
