@@ -5,6 +5,8 @@ Changes to Version 2.3-0
   o Added bootstrap dialog for "lm"s and "glm"s.
   
   o Added delta-method dialog.
+  
+  o Added view data dialog, supporting viewing a subset of the active data set (suggestion of Sung-il Cho).
 
 
 Changes to Version 2.2-4
